[project]
name = "jamal"
version = "0.1.0"
authors = [
  { name="Kevork Keheian", email="" },
]
description = "ETL tool for data processing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/optiret/jamal
Issues = "https://github.com/optiret/jamal/issues"